--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
   },
   "dependencies": {
     "html-webpack-plugin": "^3.2.0",
+    "prettier": "^1.15.3",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3"
   }
